--- a/lang/de.yml
+++ b/lang/de.yml
@@ -1,4 +1,4 @@
-en:
+de:
   ATW\ElementalTextImage\Models\ElementTextImage:
     BlockType: 'Text/Bild'
     ContentLabel: 'Text/Bild'
@@ -7,3 +7,11 @@ en:
       one: 'Ein Text/Bild Element'
       other: '{count} Text/Bild Elemente'
     SINGULARNAME: 'Text/Bild Element'
+  DNADesign\Elemental\Models\ElementContent:
+    BlockType: Text
+    ContentLabel: Text
+    PLURALNAME: 'Text Elemente'
+    PLURALS:
+      one: 'Ein Text Element'
+      other: '{count} Text Elemente'
+    SINGULARNAME: 'Text Element'
