--- a/lang/de.yml
+++ b/lang/de.yml
@@ -7,6 +7,7 @@ de:
       one: 'Ein Text/Bild Element'
       other: '{count} Text/Bild Elemente'
     SINGULARNAME: 'Text/Bild Element'
+    db_Image: 'Bild'
   DNADesign\Elemental\Models\ElementContent:
     BlockType: Text
     ContentLabel: Text
