--- a/lang/nl.yml
+++ b/lang/nl.yml
@@ -7,6 +7,8 @@ nl:
       one: 'A Tekst/Afbeelding element'
       other: '{count} Tekst/Afbeelding elementen'
     SINGULARNAME: 'Tekst/Afbeelding element'
+    VARIANT: "Variant"
+    CHOOSE_VARIANT: "Kies variant"
   ATW\ElementalBase\Models\BaseElement:
     VARIANT: "Variant"
     CHOOSE_VARIANT: "Kies variant"
